# text_extraction_server

./: README.md  main.py  pyproject.toml  text_extraction.py
libs/: text_extraction.py
